--- a/chrome/components/one_root-personal.css
+++ b/chrome/components/one_root-personal.css
@@ -6,22 +6,29 @@
   --fuchsia: #fa1e4e;     --blue: #5021ff;     --aqua: #00bfff;         --cyan: #00ffff;          --lightblue: #45a1ff;     --pink: #FF0F7E;
   --purple: #8d35e2;      --green: #05b694;    --aquamarine: #00ffa2;   --lightgreen: #36ff4e;    --yellowbrown: #febd60;   --swampautumn: #fdf008;
   --gray: #bfb6d2;        --orange: #ff6c22;   --yellow: #ffe20f;       --red: #ff3230;           --navyblue: #0050cE;      --poison: #cb17cf; 
-  
-/*                                                                                                                                 
-    Accent color -----> UI del navegador.  -----|                  |---- userContent <------------ Accent color
-                                                |                  |     (Add-ons, preferences and newtab page.)
-                                                v                  v                                                          */
-  --general-color: var(--lwt-toolbarbutton-icon-fill-attention, var(--blue));
+  --auto-color:  var(--lwt-accent-color);
+  --auto-acento-dark: color-mix(in srgb, var(--auto-color) 75%, white);
+  --auto-acento-ligth: color-mix(in srgb, var(--auto-color) 75%, black);
 }
 /*---------------------------------------------- <-Personalizaciones Varias-> ---------------------------------------------------*/
 
 @media (prefers-color-scheme: dark){ :root{
   --lwt-main-image:  url("../images/newtab/wallpaper-dark.png") !important;                  /* new-tab page image - dark theme */ 
-  --lwt-private-image:  url("../images/newtab/private-dark.png") !important;                 /* new-tab private-page image - dark theme */}}
+  --lwt-private-image:  url("../images/newtab/private-dark.png") !important;                 /* new-tab private-page image - dark theme */
+  /*                                                                                                                                 
+    Accent color -----> UI del navegador.  -----|                  |---- userContent <------------ Accent color
+                                                |                  |     (Add-ons, preferences and newtab page.)
+                                                v                  v                                                          */
+  --general-color: var(--lwt-toolbarbutton-icon-fill-attention, var(--auto-acento-dark));}}
   
 @media (prefers-color-scheme: light){ :root{
   --lwt-main-image:  url("../images/newtab/wallpaper-light.png") !important;                 /* new-tab page image - white theme*/
-  --lwt-private-image:  url("../images/newtab/private-light.png") !important;                /* new-tab private-page image - white theme*/}}
+  --lwt-private-image:  url("../images/newtab/private-light.png") !important;                /* new-tab private-page image - white theme*/
+  /*                                                                                                                                 
+    Accent color -----> UI del navegador.  -----|                  |---- userContent <------------ Accent color
+                                                |                  |     (Add-ons, preferences and newtab page.)
+                                                v                  v                                                          */
+  --general-color: var(--lwt-toolbarbutton-icon-fill-attention, var(--auto-acento-ligth));}}
 
 :root[privatebrowsingmode="temporary"]{ --general-color: var(--purple) !important; }         /* Accent color private mode */
   
