bug fixes in popup windows
- Additional fix for compatibility with themes that use 2 or more images.

--- a/chrome/components/one_left-sidebar.css
+++ b/chrome/components/one_left-sidebar.css
@@ -606,7 +606,7 @@ toolbarbutton[badge="0"] .toolbarbutton-badge { display: none !important; }
 
 /* Borde izquierda-derecha de la toolbar */
 
-:root:not([sizemode="fullscreen"]) #nav-bar {
+:root:not([chromehidden~="toolbar"],[sizemode="fullscreen"]) #nav-bar {
     border-radius: 8px !important;
     margin-inline-start: calc(var(--padding-left-tab) + 9px) !important;
     margin-inline-end: 4px !important;
