--- a/chrome/components/one_urlbar-searchbar.css
+++ b/chrome/components/one_urlbar-searchbar.css
@@ -221,7 +221,7 @@ findbar{                                                                 /*"tool
     pointer-events: none;
 }
 
-/* Borde izquierda-derecha de la toolbar */
+/* Bordes de la toolbar cuando left-sidebar no es usada */
 
 #nav-bar, #PersonalToolbar {
     border-radius: 8px !important;
@@ -464,7 +464,7 @@ description#identity-popup-content-owner-label, description#identity-popup-conte
 /*  --------------------------------------- Rounded corner in pages --------------------------------------- */
 
 .browserStack>browser{
-    margin: 1px 4px 4px 5px !important; 
+    margin: 1px 5px 5px 5px !important; 
     border-radius: 8px !important;
     outline: 1px solid color-mix(in srgb, var(--lwt-frame) 94%, var(--lwt-tab-text)) !important;
 }
