--- a/chrome/components/one_urlbar-searchbar.css
+++ b/chrome/components/one_urlbar-searchbar.css
@@ -201,7 +201,7 @@ findbar{                                                                 /*"tool
     z-index: 4 !important;
 }
 
-@media (-moz-platform: windows-win7), (-moz-platform: windows-win10) {
+@media (-moz-platform: windows) {
     #urlbar-input, #urlbar-scheme {
         padding-bottom: 1px !important;
     }
